force-app/main/default/objects/AcctSeed__Financial_Report_Definition__c/fields/AcctSeed__Number_of_Rows__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Number_of_Rows__c</fullName>
    <label>Number of Rows</label>
    <summaryForeignKey>AcctSeed__Financial_Report_Row__c.AcctSeed__Financial_Report_Definition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>