force-app/main/default/objects/AcctSeed__Financial_Report_Definition__c/fields/AcctSeed__Percentage_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Percentage_Decimal_Places__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Percentage Decimal Places</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>